Rebrand TIXAE docs to Orova

--- a/agent-creation/design-and-setup.mdx
+++ b/agent-creation/design-and-setup.mdx
@@ -98,7 +98,7 @@ Example: `DM Sans`
 
 <CardGroup cols={2}>
   <Card title="Language Code:" icon="language">
-     TIXAE Agents uses [ISO 639-1 language codes](https://en.wikipedia.org/wiki/List_of_ISO_639_language_codes) to set the language, this means your widget can have literally **any** language. **Codes are primarily used in the developer API.
+     Orova Agents uses [ISO 639-1 language codes](https://en.wikipedia.org/wiki/List_of_ISO_639_language_codes) to set the language, this means your widget can have literally **any** language. **Codes are primarily used in the developer API.
     
 
     
@@ -293,7 +293,7 @@ Example: `#F34534`
 
 ## Showcasing the agent
 
-It's essential to know how the agent behaves and looks before launching on your website or letting a client test it. TIXAE Agents has two options for testing, right from the agent designer:
+It's essential to know how the agent behaves and looks before launching on your website or letting a client test it. Orova Agents has two options for testing, right from the agent designer:
 
 
 
