--- a/agent-creation/initial-prompt.mdx
+++ b/agent-creation/initial-prompt.mdx
@@ -95,7 +95,7 @@ Then show the infamous Rick Astely video in an iFrame after mentioning that you 
 
 Then generate some random buttons and a card with one button without image and a funny joke in it.
 
-As a final message tell the user to test out initial message prompt in TIXAE Agents, cause its freaking awesome!
+As a final message tell the user to test out initial message prompt in Orova Agents, cause its freaking awesome!
 ```
 
 <Tip>
