--- a/agent-creation/knowledgebase/about-the-knowledgebase.mdx
+++ b/agent-creation/knowledgebase/about-the-knowledgebase.mdx
@@ -46,7 +46,7 @@ RAG (Retrieval Augmented Generation) combines two powerful components that ensur
     Searches the Knowledge Base to find relevant information.
   </Card>
   <Card title="Augmented Generation" icon="wand-magic-sparkles">
-    Uses the retrieved information to generate precise and contextually accurate responses using one of the LLMs available in TIXAE Agents.
+    Uses the retrieved information to generate precise and contextually accurate responses using one of the LLMs available in Orova Agents.
   </Card>
 </CardGroup>
 
@@ -79,7 +79,7 @@ RAG (Retrieval Augmented Generation) combines two powerful components that ensur
  
 <img class="rounded-md" src="/images/knowledgebase_interface_shots.png" width="600"></img> 
 
->The knoweldge base interface in TIXAE Agents
+>The knoweldge base interface in Orova Agents
 
 
 ### Explore related reading about how to set up your knowledgebase:
