--- a/agent-creation/knowledgebase/adding-data.mdx
+++ b/agent-creation/knowledgebase/adding-data.mdx
@@ -5,7 +5,7 @@ description: 'Description of your new file.'
 
 ## Adding Data to the Knowledge Base
 
-    TIXAE Agents offers multiple methods to populate your knowledge base with data: 
+    Orova Agents offers multiple methods to populate your knowledge base with data: 
 
  
  
@@ -75,7 +75,7 @@ description: 'Description of your new file.'
     # 
 ## Adding Data to the Knowledge Base
 
-TIXAE Agents offers multiple methods to populate your knowledge base with data. Follow the steps below for each method:
+Orova Agents offers multiple methods to populate your knowledge base with data. Follow the steps below for each method:
 
 <Accordion title="">
 ### Direct Text Entry
