--- a/agent-creation/knowledgebase/kb-and-ui-engine.mdx
+++ b/agent-creation/knowledgebase/kb-and-ui-engine.mdx
@@ -3,7 +3,7 @@ title: 'KB and UI-engine'
 description: ''
 icon: desktop
 ---
-The [UI Engine](features/ui-engine) is a powerful feature in TIXAE Agents that allows you to create dynamic, interactive elements in your agent's responses. By integrating the UI-Engine with your knowledge base, you can create more sophisticated and user friendly interfaces. This doc shows you how to effectively combine these two powerful tools.
+The [UI Engine](features/ui-engine) is a powerful feature in Orova Agents that allows you to create dynamic, interactive elements in your agent's responses. By integrating the UI-Engine with your knowledge base, you can create more sophisticated and user friendly interfaces. This doc shows you how to effectively combine these two powerful tools.
 
 
 
@@ -162,6 +162,6 @@ If the user asks to book an appointment embed this link to calendly in a iframe:
 
 ### Test it out:
 
-{/* TODO: Change the iframe to TIXAE Agents */}
+{/* TODO: Change the iframe to Orova Agents */}
 <iframe src="https://voiceglow.org/app/eu/render/gib2no07kqdy1f2m/iframe" width="700" height="600" style={{borderRadius: '1.2rem' }} />
->Try asking Gia to book an appointment or tell you anything about TIXAE Agents and see the UI-engine in action.
+>Try asking Gia to book an appointment or tell you anything about Orova Agents and see the UI-engine in action.
