--- a/agent-creation/system-prompt/prompt-guide.mdx
+++ b/agent-creation/system-prompt/prompt-guide.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Prompt Engineering: Step-by-Step Guide'
-description: 'Learn how to craft effective prompts for your agents in TIXAE AI'
+description: 'Learn how to craft effective prompts for your agents in Orova AI'
 ---
 
 
@@ -11,7 +11,7 @@ description: 'Learn how to craft effective prompts for your agents in TIXAE AI'
 Clearly articulate the AI's role, personality, and primary goals. This sets the foundation for all interactions.
 
 <Info>
-TIXAE Agents are masters of personality, capable of adopting a wide range of tones and styles to suit your needs. Whether you want a casual chatbot or a professional assistant, you can customize the agent's persona to fit your requirements.
+Orova Agents are masters of personality, capable of adopting a wide range of tones and styles to suit your needs. Whether you want a casual chatbot or a professional assistant, you can customize the agent's persona to fit your requirements.
 </Info>
 #
 <Tip>
@@ -40,7 +40,7 @@ You're a laid-back virtual travel buddy with a knack for finding hidden gems in 
 #
 ## Step 2: AI + Context = Truth
 #
-AI thrives on context. In TIXAE Agents, context comes from three primary sources: system prompt, user input, and the built-in knowledgebase.
+AI thrives on context. In Orova Agents, context comes from three primary sources: system prompt, user input, and the built-in knowledgebase.
 
 <CardGroup cols={2}>
   <Card title="Improved Accuracy" icon="bullseye-arrow">
@@ -64,7 +64,7 @@ AI thrives on context. In TIXAE Agents, context comes from three primary sources
     Clearly define the problem, audience, and desired outcome to keep responses relevant and contextually driven.
   </Step>
   <Step title="Leverage the Knowledge Base">
-    TIXAE Agent's knowledge base provides a layer of information on top of the model's training data, ensuring consistent and accurate responses.
+    Orova Agent's knowledge base provides a layer of information on top of the model's training data, ensuring consistent and accurate responses.
   </Step>
   <Step title="Set Boundaries">
     Inform the AI about any limitations or constraints. This ensures the model always keeps to its task and context.
