--- a/agent-creation/system-prompt/step-1-define-the-tone-and-objective.mdx
+++ b/agent-creation/system-prompt/step-1-define-the-tone-and-objective.mdx
@@ -9,7 +9,7 @@ icon: bullseye
 Clearly articulate the AI's role, personality, and primary goals. This sets the foundation for all interactions.
 
 <Info>
-TIXAE Agents are **masters of personality**, capable of adopting a wide range of tones and styles to suit your needs. Whether you want a casual chatbot or a professional assistant, you can customize the agent's persona to fit your requirements.
+Orova Agents are **masters of personality**, capable of adopting a wide range of tones and styles to suit your needs. Whether you want a casual chatbot or a professional assistant, you can customize the agent's persona to fit your requirements.
 </Info>
 #
 <Tip>
