--- a/agent-creation/system-prompt/step-2-ai-plus-context.mdx
+++ b/agent-creation/system-prompt/step-2-ai-plus-context.mdx
@@ -5,7 +5,7 @@ icon: border-all
 ---
 
 #
-AI thrives on context. In TIXAE AI, context comes from three primary sources: system prompt, user input, and the built-in knowledgebase.
+AI thrives on context. In Orova AI, context comes from three primary sources: system prompt, user input, and the built-in knowledgebase.
 
 <CardGroup cols={2}>
   <Card title="Improved Accuracy" icon="bullseye-arrow">
@@ -29,7 +29,7 @@ AI thrives on context. In TIXAE AI, context comes from three primary sources: sy
     Clearly define the problem, audience, and desired outcome to keep responses relevant and contextually driven.
   </Step>
   <Step title="Leverage the Knowledge Base">
-    TIXAE Agent's knowledge base provides a layer of information on top of the model's training data, ensuring consistent and accurate responses.
+    Orova Agent's knowledge base provides a layer of information on top of the model's training data, ensuring consistent and accurate responses.
   </Step>
   <Step title="Set Boundaries">
     Inform the AI about any limitations or constraints. This ensures the model always keeps to its task and context.
