--- a/agent-creation/system-prompt/step-5-advanced-techniques-and-testing.mdx
+++ b/agent-creation/system-prompt/step-5-advanced-techniques-and-testing.mdx
@@ -79,7 +79,7 @@ Creating the best possible agent involves continuously refining your prompts. Wh
 </Steps>
 
 ### Conclusion
-Mastering prompt engineering is crucial for developing effective AI agents that provide high-quality, accurate, and engaging interactions. By following the steps outlined in this guide and continuously refining your approach, you can create prompts that unlock the full potential of your agents in TIXAE AI.
+Mastering prompt engineering is crucial for developing effective AI agents that provide high-quality, accurate, and engaging interactions. By following the steps outlined in this guide and continuously refining your approach, you can create prompts that unlock the full potential of your agents in Orova AI.
 
 
 Remember that prompt engineering is an iterative process. Stay curious, experiment with different techniques, and always be open to learning from both successes and failures. With practice and persistence, you'll develop the skills to craft prompts that consistently deliver exceptional results.
