--- a/features/ai-models.mdx
+++ b/features/ai-models.mdx
@@ -4,12 +4,12 @@ description: ""
 icon: robot
 ---
 
-TIXAE AI provides access to a wide range of **state-of-the-art** AI models, ensuring that your agents are always equipped with the best and newest models on the market.
+Orova AI provides access to a wide range of **state-of-the-art** AI models, ensuring that your agents are always equipped with the best and newest models on the market.
 
 #
 
 <Tip>
-  As soon as **new models** are released, the TIXAE AI team promptly updates
+  As soon as **new models** are released, the Orova AI team promptly updates
   the platform. This means you typically get access to the latest and most
   powerful models **right away**.{" "}
 </Tip>
