--- a/features/aimodels.mdx
+++ b/features/aimodels.mdx
@@ -4,9 +4,9 @@ description: ''
 ---
 
 
-# AI Models in TIXAE AI
+# AI Models in Orova AI
 
-TIXAE AI provides access to a wide range of state-of-the-art AI models, ensuring you always have the best tools for your agents. Our selection is regularly updated to include the newest and most powerful models available.
+Orova AI provides access to a wide range of state-of-the-art AI models, ensuring you always have the best tools for your agents. Our selection is regularly updated to include the newest and most powerful models available.
 
 ## Model Capabilities
 
