--- a/features/crawler.mdx
+++ b/features/crawler.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Crawler'
-description: 'Efficiently build your agents knowledge base with the TIXAE AI Crawler'
+description: 'Efficiently build your agents knowledge base with the Orova AI Crawler'
 icon: spider
 ---
 
@@ -206,11 +206,11 @@ The scraped page data shows a detailed view of each page scraped in the job:
 **Example snippet of scraped information in markdown:**
 
 ```markdown
-TIXAE AI provides access to a wide range of **state-of-the-art** AI models, ensuring that your agents are always equipped with the best and newest models on the market.
+Orova AI provides access to a wide range of **state-of-the-art** AI models, ensuring that your agents are always equipped with the best and newest models on the market.
 
 =========================================================
 
-As soon as **new models** are released, the TIXAE AI team promptly updates the platform. This means you typically get access to the latest and most powerful models **right away**.
+As soon as **new models** are released, the Orova AI team promptly updates the platform. This means you typically get access to the latest and most powerful models **right away**.
 ```
 <Note>
   Scraped information is formatted in markdown for easy reading by LLMs. To learn more about formatting KB documents, visit the [formatting doc](/agent-creation/knowledgebase/structuring-kb-documents).
