--- a/features/live-handoff.mdx
+++ b/features/live-handoff.mdx
@@ -79,7 +79,7 @@ If you haven't granted your client access to **settings**, they won't be able to
 
 ## Using Live Handoff
 
-Once set up, you can manage live handoffs through the TIXAE Agents platform or the client dashboard:
+Once set up, you can manage live handoffs through the Orova Agents platform or the client dashboard:
 
 <AccordionGroup>
   <Accordion title="Handling Incoming Handoff Requests">
@@ -145,7 +145,7 @@ Once set up, you can manage live handoffs through the TIXAE Agents platform or t
 
 ## Handling Unanswered Requests
 
-To ensure no user query goes unanswered, TIXAE Agents offers a fallback option for users to submit a query directly in the chat:
+To ensure no user query goes unanswered, Orova Agents offers a fallback option for users to submit a query directly in the chat:
 
 
  
