--- a/features/tools.mdx
+++ b/features/tools.mdx
@@ -11,7 +11,7 @@ Tools, also known as <Tooltip tip="In the context of AI models, functions are pr
 
 
 <Note>
-TIXAE Agents sends parameters as a JSON array to your specified endpoint, enabling seamless integration with a wide range of automation platforms and servers. This flexibility allows you to create powerful, custom interactions between your AI agents and external systems.
+Orova Agents sends parameters as a JSON array to your specified endpoint, enabling seamless integration with a wide range of automation platforms and servers. This flexibility allows you to create powerful, custom interactions between your AI agents and external systems.
 </Note>
 
 
@@ -37,7 +37,7 @@ Please be **careful** when adjusting these tools as it can break core functional
 
 ## Custom tools
 
-Whether you need fully customized tools or prefer ready-made solutions, TIXAE AI has you covered: 
+Whether you need fully customized tools or prefer ready-made solutions, Orova AI has you covered: 
 
 <Tip>
 Implement across a **wide range** of platforms, including popular automation services like `Make.com` or `Zapier`. You can design tools for diverse functions such as data retrieval, external API interactions, or complex multi-step processes.
@@ -64,13 +64,13 @@ When creating a custom tool, clearly define its purpose, parameters, and expecte
 </Tip>
   </Accordion>
   <Accordion title="Select from Preset Templates">
-    TIXAE Agents offers a variety of pre-configured tool templates that can be easily customized to fit your needs. For example, the SendEmail template provides a foundation for email integration that you can build upon.
+    Orova Agents offers a variety of pre-configured tool templates that can be easily customized to fit your needs. For example, the SendEmail template provides a foundation for email integration that you can build upon.
 <Note>
 Preset templates are an excellent starting point for those new to tool creation or for quickly implementing standard functionalities.
 </Note>
   </Accordion>
   {/* <Accordion title="Use Marketplace Templates">
-    Explore the tool templates available in the marketplace. These are created by the TIXAE AI team or community members and offer a wide range of specialized functionalities.
+    Explore the tool templates available in the marketplace. These are created by the Orova AI team or community members and offer a wide range of specialized functionalities.
 <Tip>
 Marketplace templates comes with **instructions** and **pre-made** Make.com automations. This makes them a valuable resource saving both dev time and expanding your agent's capabilities.
 </Tip>
@@ -196,7 +196,7 @@ controls
 
 
 ### Using Preview LLM
-TIXAE Agents offers a powerful "Preview LLM" feature for thorough tool testing before deployment.
+Orova Agents offers a powerful "Preview LLM" feature for thorough tool testing before deployment.
 <Steps>
   <Step title="Access Preview LLM">
     Navigate to your agent's dedicated tools page, select the tool you want to test and click `Preview LLM`.
@@ -314,7 +314,7 @@ Marketplace offerings can significantly speed up your development process and pr
 #
 ## Conclusion
 
-Tools are a powerful feature in TIXAE Agents that can significantly enhance your AI agents' capabilities. By following this guide and best practices, you can create and integrate tools that allow your agents to perform a wide range of actions, making them more versatile and valuable to your users.
+Tools are a powerful feature in Orova Agents that can significantly enhance your AI agents' capabilities. By following this guide and best practices, you can create and integrate tools that allow your agents to perform a wide range of actions, making them more versatile and valuable to your users.
 
 <Info>
 **And Remember:** The key to successful tool implementation is clear communication between your system prompt, the AI agent, and the tool itself. Well-defined parameters and clear instructions will lead to smooth and effective tool usage.
