--- a/features/ui-engine.mdx
+++ b/features/ui-engine.mdx
@@ -6,7 +6,7 @@ icon: code
 
 ## Introduction
 
-The UI Engine is a powerful feature in TIXAE Agents that enables your AI agents to create rich, interactive elements in their responses. This enhances user engagement by going beyond simple text exchanges.
+The UI Engine is a powerful feature in Orova Agents that enables your AI agents to create rich, interactive elements in their responses. This enhances user engagement by going beyond simple text exchanges.
 
 
 
@@ -108,7 +108,7 @@ The UI Engine offers a variety of versatile interactive elements to enhance your
         ```markdown
         Write this with markdown formatting:
 
-#### 👋 Welcome to TIXAE AI! 🎨✨
+#### 👋 Welcome to Orova AI! 🎨✨
  I'm Gia, your friendly AI assistant. I'm here to help you navigate our AI agent studio and unleash your creativity! 
 
 How can I assist you today?
