--- a/features/usage-tab.mdx
+++ b/features/usage-tab.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Usage Tab'
-description: 'The **Usage Page** in [TIXAE Agents](https://voiceglow.org/) provides detailed insights into how resources like credits and tokens are consumed across various agents and users. This page is a powerful tool for monitoring performance and optimizing costs.'
+description: 'The **Usage Page** in [Orova Agents](https://voiceglow.org/) provides detailed insights into how resources like credits and tokens are consumed across various agents and users. This page is a powerful tool for monitoring performance and optimizing costs.'
 icon: chart-bar
 ---
 
