--- a/features/voice-to-voice.mdx
+++ b/features/voice-to-voice.mdx
@@ -6,13 +6,13 @@ icon: microphone
 
 
 
-In the era of advanced AI and Large Language Models (LLMs), voice interactions have reached unprecedented levels of naturalness. TIXAE Agent harnesses this technology by integrating with VAPI, a cutting-edge voice-to-voice platform, to provide your agents with lifelike conversational abilities.
+In the era of advanced AI and Large Language Models (LLMs), voice interactions have reached unprecedented levels of naturalness. Orova Agent harnesses this technology by integrating with VAPI, a cutting-edge voice-to-voice platform, to provide your agents with lifelike conversational abilities.
 
 <Note>
 Voice-to-voice technology now incorporates natural speech patterns, including filler words like "mhmm" and "ya", making conversations feel more authentic. Users can even interrupt the AI mid-sentence, closely mimicking human-to-human interactions.
 </Note>
 
-This guide will walk you through setting up your VAPI profile and enabling voice-to-voice capabilities for your TIXAE Agent.
+This guide will walk you through setting up your VAPI profile and enabling voice-to-voice capabilities for your Orova Agent.
 
 ## Connecting to VAPI
 
@@ -41,11 +41,11 @@ This guide will walk you through setting up your VAPI profile and enabling voice
     
   </Step>
 
-  <Step title="Configure TIXAE Agent Credentials">
-    **In TIXAE Dashboard:**
+  <Step title="Configure Orova Agent Credentials">
+    **In Orova Dashboard:**
     1. Go to the `credentials tab`
     2. Paste your VAPI private and public keys in the appropriate fields
-    3. For the Default Server URL secret, go back to VAPI, find it under settings > `Server URL`, and paste it in TIXAE Agent's credentials tab
+    3. For the Default Server URL secret, go back to VAPI, find it under settings > `Server URL`, and paste it in Orova Agent's credentials tab
     <img src="/images/credentials-ui-shots.png" alt="The credentials user interface" width="900"/>
   </Step>
 
@@ -54,7 +54,7 @@ This guide will walk you through setting up your VAPI profile and enabling voice
 
 ## Integrating with Your Agent
 
-Now that you've set up VAPI, it's time to enable voice capabilities for your TIXAE Agent:
+Now that you've set up VAPI, it's time to enable voice capabilities for your Orova Agent:
 
 <Steps>
   <Step title="Access Agent Channels Tab">
@@ -75,7 +75,7 @@ Now that you've set up VAPI, it's time to enable voice capabilities for your TIX
     The last field you need to fill out is the `VAPI assistant ID`. You can find this in your VAPI dashboard - simply copy it from your assistant's details.
   </Step>
   <Step title="Congrats" icon="party-horn">
-    You've successfully set up voice-to-voice capabilities in TIXAE Agent, offering your users or clients an innovative way to interact with your brand.
+    You've successfully set up voice-to-voice capabilities in Orova Agent, offering your users or clients an innovative way to interact with your brand.
 
 <video
   controls
@@ -104,7 +104,7 @@ The voice setup interface provides several options to customize how VAPI interac
     **This option adds your agent's entire Knowledge Base (KB) to your VAPI assistant.**
     
     - Each synced document consumes `1 credit`
-    - TIXAE Agent will inject your KB documents into the VAPI assistant whenever changes are made to the KB
+    - Orova Agent will inject your KB documents into the VAPI assistant whenever changes are made to the KB
     
     <Warning>
       VAPI currently has a limit of **20,000** characters per document.
@@ -112,7 +112,7 @@ The voice setup interface provides several options to customize how VAPI interac
   </Accordion>
 
   <Accordion title="Sync all on save">
-    **Enable this to automatically update your VAPI assistant with changes made to your TIXAE Agent, including:**
+    **Enable this to automatically update your VAPI assistant with changes made to your Orova Agent, including:**
     - Initial message
     - Knowledgebase documents
     - System prompt
@@ -135,7 +135,7 @@ The voice setup interface provides several options to customize how VAPI interac
   </Accordion>
 
   <Accordion title="Enable VAPI on Web">
-    This option adds a quick upload attachment button to the TIXAE Agent template. When a file is uploaded, it triggers an intent with the file URL in Voiceflow. Read more about the voiceflow integration [here](/integration/voiceflow).
+    This option adds a quick upload attachment button to the Orova Agent template. When a file is uploaded, it triggers an intent with the file URL in Voiceflow. Read more about the voiceflow integration [here](/integration/voiceflow).
 
     **You can customize the VAPI Web popup message in the provided input field.**
   </Accordion>
