--- a/help-center/connect-meta.mdx
+++ b/help-center/connect-meta.mdx
@@ -39,13 +39,13 @@ icon: 'meta'
 - This step it will ask you permissions for the instagram page to be connected to the facebook page and added to the business portfolio, press continue..
 ---
 ![8](/images/meta-tut/8.PNG)
-- Once this page has shown you've successfully connected both your facebook page and instagram to the same messenger and TIXAE Agents will be able to work now if connected to it!
+- Once this page has shown you've successfully connected both your facebook page and instagram to the same messenger and Orova Agents will be able to work now if connected to it!
 <Warning>
 If for some reason you get an error saying "Couldn't connect instagram page" or something similar make sure to enable 2FA on your facebook account AND your instagram account as meta currently has restrictions especially for new accounts both on facebook/instagram, most of these restrictions are fixed when you enable 2FA, tutorial: [here](https://help.instagram.com/566810106808145)
 </Warning>
 ---
-### Connect TIXAE Agents
-- Once you've successfully complete all the steps you should now head to your [TIXAE Agents](https://voiceglow.org/) dashboard, if you don't have an account already we recommend signing in with meta as that makes the onboarding process seamless
+### Connect Orova Agents
+- Once you've successfully complete all the steps you should now head to your [Orova Agents](https://voiceglow.org/) dashboard, if you don't have an account already we recommend signing in with meta as that makes the onboarding process seamless
 - If you already have an account head to the agent you wnat to connect, channels tab > select instagram/facebook (they show the same thing) >
 
 ![9](/images/meta-tut/9.PNG)
@@ -64,7 +64,7 @@ Note: If you're concerned with fully white labelled solution to connect your cli
 - Choose the **same instagram page you've connected to the facebook page & the the business portfolio.**
 ---
 ![13](/images/meta-tut/13.PNG)
-- Once you've choosen the correct pages, etc this page should show, **you can manage the connection anytime btween TIXAE Agents & your business portfolio & assets from this link.**
+- Once you've choosen the correct pages, etc this page should show, **you can manage the connection anytime btween Orova Agents & your business portfolio & assets from this link.**
 ---
 ![14](/images/meta-tut/14.PNG)
 - After the signin flow **the pages you've selected should appear here, you should then press continue on the page you want to connect**.
@@ -78,7 +78,7 @@ Note: If you're concerned with fully white labelled solution to connect your cli
 ![16](/images/meta-tut/16.PNG)
 - You can now test the integration by **sending a message to your facebook page or instagram page**
 ![17](/images/meta-tut/17.PNG)
-- **You should see the message appear in your TIXAE Agents dashboard > conversations tab.**
+- **You should see the message appear in your Orova Agents dashboard > conversations tab.**
 ---
 - Testing Instagram
 <Warning>
@@ -87,7 +87,7 @@ Note: If you're concerned with fully white labelled solution to connect your cli
 ![18](/images/meta-tut/18.PNG)
 - You can now test the integration by **sending a message to your instagram page**
 ![19](/images/meta-tut/19.PNG)
-- **You should see the message appear in your TIXAE Agents dashboard > conversations tab.**
+- **You should see the message appear in your Orova Agents dashboard > conversations tab.**
 ---
 ### Connect Telegram
 - To connect your Telegram bot to Voiceglow, you’ll first need to create a bot on Telegram using **BotFather**.
@@ -132,8 +132,8 @@ Note: If you're concerned with fully white labelled solution to connect your cli
 If you're wondering if these pages are actually connected to an AI agent then yes they are!
 </Note>
 Follow us & send Atoot our AI agent a message :)
-- Instagram: https://www.instagram.com/TIXAE Agents.app/
-- Facebook: https://facebook.com/TIXAE Agents
+- Instagram: https://www.instagram.com/Orova Agents.app/
+- Facebook: https://facebook.com/Orova Agents
 - For any help or questions feel free to reach out to us on our [discord](https://discord.gg/XrJtBsQQRN)
 ---
 By Moe - [Linkedin](https://www.linkedin.com/in/moe-ayman-0759a8288/)
