--- a/help-center/gh-pages-setup.mdx
+++ b/help-center/gh-pages-setup.mdx
@@ -32,7 +32,7 @@ icon: 'github'
 > This page above should appear and you should now copy that URL and also test it in your browser to see if it works.
 ---
 ![11](/images/ghpages-tut/11.PNG)
-> If this page shows up then **you've successfully setup your github pages site**, you can now use this link to host your TIXAE Agents agent or any other static site files as well.
+> If this page shows up then **you've successfully setup your github pages site**, you can now use this link to host your Orova Agents agent or any other static site files as well.
 
 <Warning>
     Github pages have a limit of 100GB/month of bandwidth, if you exceed this limit it will stop working, this is approximately about 100,000 visits per month.
@@ -42,7 +42,7 @@ Once you have github pages link you can now use it to host the script files as f
 
 ```js
 <div style="width: '500px'; height: '500px';" id="VG_OVERLAY_CONTAINER">
-<!-- Here is where TIXAE Agents renders the widget. -->
+<!-- Here is where Orova Agents renders the widget. -->
 <!-- Set width, height for 500px as an example after changing render to 'full-width' -->
 </div>
 
@@ -54,7 +54,7 @@ Once you have github pages link you can now use it to host the script files as f
             region: 'eu', // REPLACE WITH YOUR ACCOUNT REGION
             render: 'bottom-right', // REPLACE WITH 'full-width' for full width widget or "bottom-left" to change postion
             stylesheets: [
-                // Base TIXAE Agents CSS
+                // Base Orova Agents CSS
                 "https://moe03.github.io/vg-hosting-template-v2/assets/vg_live_build/styles.css",
                 // Add your custom css stylesheets, Can also add relative URL ('/public/your-file.css)
             ],
@@ -101,7 +101,7 @@ So far If you want to automatically update the script files on your github pages
 > Copy the token and save it somewhere safe, you will need it in the next step.
 ---
 ![18](/images/ghpages-tut/18.PNG)
-> Head to TIXAE Agents dashboard > **credentials tab with the key icon** > **Paste your github username and the token you've generated.**
+> Head to Orova Agents dashboard > **credentials tab with the key icon** > **Paste your github username and the token you've generated.**
 >> **Note that the username is your github username and if you're using an org repo it should be the org username.**
 ---
 Once you've saved the credentials whenever we update the script files it will automatically be updated on your github pages site repo ✅
