--- a/help-center/when-to-use.mdx
+++ b/help-center/when-to-use.mdx
@@ -1,12 +1,12 @@
 ---
-title: 'When To Use TIXAE Agents'
-description: 'Our take on AI field and how TIXAE Agents fits in.'
+title: 'When To Use Orova Agents'
+description: 'Our take on AI field and how Orova Agents fits in.'
 icon: 'question'
 ---
-### Pros of using TIXAE Agents
+### Pros of using Orova Agents
 - Dealing with AI tends to need a lot of time especially with prompt engineering, setting up a DB, ensuring your agent's data is always up to date, and of course ability to stream the responses, use tools, and be more interactive is a must now, **mediocre chatbots are going to have bad results if you're a business & are not going to sell themselves if you're an agency.**
 
-> **Without TIXAE Agents you'll need to handle:**
+> **Without Orova Agents you'll need to handle:**
 - DBs and conversational data.
 - APIs to let you easily connect your agennt to any platform.
 - Fast reliable backend & Websocket servers to stream responses.
@@ -16,25 +16,25 @@ icon: 'question'
 - Setting up a custom front-end to deploy your agent on your website, and setting up even more backend endpoints to handle connecting to Whatsapp/Facebook Messenger/Instagram/Discord..
 - Etc..
 
-> **Luckily, TIXAE Agents has all of this and more to try out right now for free! so you can focus on building your agent and not worry about the rest.** 
+> **Luckily, Orova Agents has all of this and more to try out right now for free! so you can focus on building your agent and not worry about the rest.** 
 
 - The right way for you to build an agent for your business or for your clients is to **focus on the quality of the responses, that involves hours of prompt engineering, setting up the most perfect KB possible, A/B testing, tools setup & much more**, we let you focus on building the agent without worring about how to connect it to different channels/managing infrastructure or front-end.
-- **TIXAE Agents is perfect for an agency or a business of any size that dont wan't to deal with all the hassle of setting a lot of infrastructure and wants the best practices in their hands to make their support/marketing channels AI first with powerful AI agents that they can setup in minutes and go live tonight.**
+- **Orova Agents is perfect for an agency or a business of any size that dont wan't to deal with all the hassle of setting a lot of infrastructure and wants the best practices in their hands to make their support/marketing channels AI first with powerful AI agents that they can setup in minutes and go live tonight.**
 
-### Cons of using TIXAE Agents
-- Now all the previous sounds good until you need to make really advanced integrations/custom UI (I dunno like if you want to add a 3D speaking model as the chat avatar for some reason 😂), **then you'll start hitting limits with TIXAE Agents, but these limits are only for anything related to the front-end (Web widget/Dashboard) (we are working on improving customizablity tremendously especially for developers)**, that said; our whole backend is controllable via the [REST API](/api-reference/agents/get) (you can easily create, edit agents, adjust prompts, add/delete KB docs from the API).
+### Cons of using Orova Agents
+- Now all the previous sounds good until you need to make really advanced integrations/custom UI (I dunno like if you want to add a 3D speaking model as the chat avatar for some reason 😂), **then you'll start hitting limits with Orova Agents, but these limits are only for anything related to the front-end (Web widget/Dashboard) (we are working on improving customizablity tremendously especially for developers)**, that said; our whole backend is controllable via the [REST API](/api-reference/agents/get) (you can easily create, edit agents, adjust prompts, add/delete KB docs from the API).
 - **Voicglow is not a good fit for you if you're looking to build a completely custom front-end for your agent where CSS edits are not enough, or if you're looking to build a custom RAG solution where you control everything, do devops & control every bit yourself and generally have more time/resources to hire developers.**
 
 ### Conclusion
-> **With TIXAE Agents**
+> **With Orova Agents**
 >> **You can focus on building the best agent possible and let us handle the rest, saving a lot of time & resources, be able to deploy a professional agent that uses the latest best practices in AI on a lot of channels tonight.**
 
-> **Without TIXAE Agents**
+> **Without Orova Agents**
 >> **You'll need to handle all the infrastructure, front-end, and backend yourself, in addition to developing & maintaining a complete solution from scratch which involves months of continous devops without tested quality gurantees.**
 
-If I was an agency starting our TIXAE Agents would be perfect, letting me focus on developing the agent itself without worrying about delivery or creating my own platform as I could whitelabel entirety of TIXAE Agents for just 5 USD and get started right away!
+If I was an agency starting our Orova Agents would be perfect, letting me focus on developing the agent itself without worrying about delivery or creating my own platform as I could whitelabel entirety of Orova Agents for just 5 USD and get started right away!
 
-In the future your clients will need custom features and I will need to move on to a more customized solution that TIXAE Agents, that's a path but there is also another path **where you can hire a complete dev team from Vocieglow to have your own version of it priotrizing your custom features, & providing 24/7 support, so instead of hiring someone on fiverr or doing it yourself we're always here to help out!**
+In the future your clients will need custom features and I will need to move on to a more customized solution that Orova Agents, that's a path but there is also another path **where you can hire a complete dev team from Vocieglow to have your own version of it priotrizing your custom features, & providing 24/7 support, so instead of hiring someone on fiverr or doing it yourself we're always here to help out!**
 
 ### Connect with us:
 - [Book a call](https://cal.com/moe-ayman-5za5bu/sales) to discuss your needs and how we can help you.
