--- a/integration/Channels/discord.mdx
+++ b/integration/Channels/discord.mdx
@@ -1,21 +1,21 @@
 ---
 title: "Connect Discord"
-description: "Connect your Discord server to your AI agent on TIXAE Agents."
+description: "Connect your Discord server to your AI agent on Orova Agents."
 icon: "discord"
 ---
 
 # Discord Integration
 
-Welcome to the TIXAE Agents Discord integration guide! This document will help you quickly connect and configure Discord with TIXAE Agents, enabling seamless communication between your Discord server and AI agent.
+Welcome to the Orova Agents Discord integration guide! This document will help you quickly connect and configure Discord with Orova Agents, enabling seamless communication between your Discord server and AI agent.
 
-## Why Integrate Discord with TIXAE Agents?
+## Why Integrate Discord with Orova Agents?
 
 <Tip>
   Discord integration allows your AI agent to interact directly with users in
   your Discord server, providing automated responses and assistance 24/7.
 </Tip>
 
-By integrating Discord with TIXAE Agents, you can:
+By integrating Discord with Orova Agents, you can:
 
 - Automate responses to common user queries
 - Provide round-the-clock support in your Discord server
@@ -34,17 +34,17 @@ By integrating Discord with TIXAE Agents, you can:
 
 Before you start, ensure you have:
 
-1. An active [TIXAE Agents](https://tixaeagents.ai/) account with appropriate permissions
+1. An active [Orova Agents](https://tixaeagents.ai/) account with appropriate permissions
 2. Administrative access to the Discord server where you want to add the bot
 
 ---
 
-## Steps to Integrate Discord with TIXAE Agents
+## Steps to Integrate Discord with Orova Agents
 
 <Steps>
 
 <Step title="Locate Discord Integration">
-  1. Log in to your TIXAE Agents dashboard
+  1. Log in to your Orova Agents dashboard
   2. Navigate to the **Channels** tab
   3. Find the **Discord** option
   4. Click on **Connect**
@@ -81,7 +81,7 @@ Before you start, ensure you have:
   5. Configure the webhook:
      - Set a name for the webhook
      - Click **Copy Webhook URL**
-  6. Return to TIXAE Agents dashboard
+  6. Return to Orova Agents dashboard
   7. Paste the webhook URL in the **Webhook URL** field
 
 ![Webhook Setup](/images/discord-tut/discord9.png)
@@ -92,7 +92,7 @@ Before you start, ensure you have:
   1. Return to your Discord server
   2. Right-click on the target channel
   3. Select **Copy Channel ID**
-  4. Paste the ID in the **Channel ID** field on TIXAE Agents
+  4. Paste the ID in the **Channel ID** field on Orova Agents
 
 {" "}
 
