--- a/integration/Channels/telegram.mdx
+++ b/integration/Channels/telegram.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Connect Telegram"
-description: "Learn how to integrate your Telegram bot with TIXAE Agents for seamless AI-powered conversations"
+description: "Learn how to integrate your Telegram bot with Orova Agents for seamless AI-powered conversations"
 icon: "telegram"
 ---
 
@@ -15,7 +15,7 @@ Telegram integration allows you to connect your AI agent with Telegram's messagi
 
 <Note>
   Before starting the integration process, ensure you have: - A Telegram account
-  - Access to your TIXAE Agents dashboard - Administrative privileges for bot
+  - Access to your Orova Agents dashboard - Administrative privileges for bot
   creation
 </Note>
 
@@ -54,9 +54,9 @@ First, you'll need to create a bot on Telegram using BotFather, Telegram's offic
   Bot](/images/meta-tut/21.PNG)
 </Tip>
 
-### 2. Connecting to TIXAE Agents
+### 2. Connecting to Orova Agents
 
-Now that you have your Telegram bot, let's connect it to your TIXAE Agents dashboard.
+Now that you have your Telegram bot, let's connect it to your Orova Agents dashboard.
 
 <Steps>
   <Step title="Access Channel Settings">
@@ -78,7 +78,7 @@ Now that you have your Telegram bot, let's connect it to your TIXAE Agents dashb
   </Step>
 
   <Step title="Check Dashboard">
-    Verify that messages appear in your TIXAE Agents dashboard under the
+    Verify that messages appear in your Orova Agents dashboard under the
     Conversations section ![Conversation View](/images/meta-tut/23.PNG)
     ![Message History](/images/meta-tut/24.PNG)
   </Step>
@@ -87,7 +87,7 @@ Now that you have your Telegram bot, let's connect it to your TIXAE Agents dashb
 <Card title="Troubleshooting">
   If your bot isn't responding: - Verify your bot token is entered correctly -
   Ensure the webhook is properly configured - Check your bot's privacy settings
-  in BotFather - Confirm your TIXAE Agents subscription is active
+  in BotFather - Confirm your Orova Agents subscription is active
 </Card>
 
 ## Best Practices
