--- a/integration/Channels/voice.mdx
+++ b/integration/Channels/voice.mdx
@@ -1,24 +1,24 @@
 ---
 title: "Connect Vapi"
-description: "Connect your Vapi account to your AI agent on TIXAE Agents."
+description: "Connect your Vapi account to your AI agent on Orova Agents."
 icon: "microphone" 
 ---
 
 # Vapi Voice Service Integration
 
-Welcome to the TIXAE Agents Vapi Voice Service integration guide! This document will help you quickly connect and configure the Vapi Voice Service with TIXAE Agents, allowing you to leverage voice interactions powered by AI.
+Welcome to the Orova Agents Vapi Voice Service integration guide! This document will help you quickly connect and configure the Vapi Voice Service with Orova Agents, allowing you to leverage voice interactions powered by AI.
 
 ## What is Vapi Voice Service?
 
 Vapi Voice Service is a powerful tool that enables voice-based interactions through AI and language models. It provides robust capabilities for processing and interpreting spoken language, making it an ideal solution for voice-based customer interactions.
 
-## Why Integrate Vapi with TIXAE Agents?
+## Why Integrate Vapi with Orova Agents?
 
 <Tip>
   Voice interactions can significantly improve user engagement and satisfaction. Consider using voice channels for scenarios where typing might be inconvenient or impossible for users.
 </Tip>
 
-By integrating Vapi with TIXAE Agents, you can:
+By integrating Vapi with Orova Agents, you can:
 - Enhance customer experiences through conversational voice interactions
 - Leverage advanced AI-powered voice recognition and response capabilities
 - Improve efficiency and reduce response times for common customer queries
@@ -32,12 +32,12 @@ By integrating Vapi with TIXAE Agents, you can:
 </Card>
 
 Before you start, ensure you have:
-1. An active [TIXAE Agents](https://voiceglow.org/) account with permissions to integrate third-party services.
+1. An active [Orova Agents](https://voiceglow.org/) account with permissions to integrate third-party services.
 2. Access to a [Vapi Voice Service](https://dashboard.vapi.ai/) account.
 
 ---
 
-## Steps to Integrate Vapi with TIXAE Agents
+## Steps to Integrate Vapi with Orova Agents
 
 <Tip>
   Make sure to keep your API keys secure and never share them publicly. Consider using environment variables for additional security.
@@ -60,9 +60,9 @@ Before you start, ensure you have:
 ---
 
 
-### Step 2: Configure TIXAE Agents for Vapi Integration
+### Step 2: Configure Orova Agents for Vapi Integration
 
-1. Log in to your [TIXAE Agents](https://voiceglow.org/) account.
+1. Log in to your [Orova Agents](https://voiceglow.org/) account.
 
 2. Go to the **Credentials** tab.
 
@@ -87,9 +87,9 @@ Before you start, ensure you have:
 
 ---
 
-### Step 4: Configure Voice Setup for the Agent on TIXAE Agents
+### Step 4: Configure Voice Setup for the Agent on Orova Agents
 
-1. On your [TIXAE Agents](https://voiceglow.org/) platform, select the **agent** you want to integrate with Vapi.
+1. On your [Orova Agents](https://voiceglow.org/) platform, select the **agent** you want to integrate with Vapi.
 2. In the agent's details, go to the **Channels** page, and click on **Voice Setup** for the Vapi integration.
 
 ![Voice Setup](/images/vapi-tut/7.png)
@@ -113,7 +113,7 @@ Before you start, ensure you have:
 
 ### Learn More
 
-- This tutorial video provides a comprehensive guide on connecting VAPI to your TIXAE agent:
+- This tutorial video provides a comprehensive guide on connecting VAPI to your Orova agent:
 
 <iframe 
   width="100%" 
@@ -135,7 +135,7 @@ Before you start, ensure you have:
 
 If you encounter issues with the Vapi Voice Service integration, try the following steps:
 
-- **API Key errors:** Double-check that you entered the correct **Public** and **Private API Keys** in both the Vapi and TIXAE Agents platforms. Ensure there are no spaces or missing characters
+- **API Key errors:** Double-check that you entered the correct **Public** and **Private API Keys** in both the Vapi and Orova Agents platforms. Ensure there are no spaces or missing characters
 - **Voice Assistant not responding:** Ensure that the Assistant ID is correct and that your agent has been properly configured for voice interactions
 - **Phone icon not appearing:** Verify that the **Enable VAPI on Web** option is checked in the **Voice Setup** section of your agent's Channels page
 
