--- a/integration/Channels/whatsapp-newMethod.mdx
+++ b/integration/Channels/whatsapp-newMethod.mdx
@@ -1,22 +1,22 @@
 ---
 title: "Connect WhatsApp Using Embedded Sign-Up"
-description: "Easily connect your WhatsApp Business account to your AI agent on TIXAE Agents using the new embedded sign-up method."
+description: "Easily connect your WhatsApp Business account to your AI agent on Orova Agents using the new embedded sign-up method."
 icon: "whatsapp"
 ---
 
 ### Introduction
 
-This guide walks you through the new embedded sign-up method to connect your WhatsApp Business account to your AI agent on TIXAE Agents. This method simplifies the process by allowing you to verify and connect a phone number not previously linked to WhatsApp directly through our platform.
+This guide walks you through the new embedded sign-up method to connect your WhatsApp Business account to your AI agent on Orova Agents. This method simplifies the process by allowing you to verify and connect a phone number not previously linked to WhatsApp directly through our platform.
 
 ### Prerequisites
 
 - A phone number **not** currently connected to WhatsApp.
-- Access to the TIXAE Agents platform.
+- Access to the Orova Agents platform.
 - A Facebook account to associate with your WhatsApp Business account.
 
 ### Step 1: Access the Channels Section
 
-1. In to your TIXAE Agent.
+1. In to your Orova Agent.
 2. Navigate to the **Channels** section in the topbar and choose whatsapp integration.
 
 ![Access Channels Section](/images/nm-whatsapp/1.png)
@@ -90,7 +90,7 @@ This guide walks you through the new embedded sign-up method to connect your Wha
 ### Step 11: Connect Your Verified Account
 
 1. Once verified, your WhatsApp Business account will appear in the list with a **Connect** button underneath it.
-2. Click the **Connect** button to link your account with TIXAE Agents.
+2. Click the **Connect** button to link your account with Orova Agents.
 
 ![Connect Button](/images/nm-whatsapp/11.png)
 
@@ -118,7 +118,7 @@ This guide walks you through the new embedded sign-up method to connect your Wha
 
 ![Final Confirmation](/images/nm-whatsapp/14.png)
 
-**Congratulations!** Your WhatsApp Business account is now successfully connected to your TIXAE AI agent.
+**Congratulations!** Your WhatsApp Business account is now successfully connected to your Orova AI agent.
 
 ### Troubleshooting
 
@@ -128,12 +128,12 @@ This guide walks you through the new embedded sign-up method to connect your Wha
 
 ### Additional Resources
 
-- [TIXAE Agents Help Center](https://help.tixae.com)
+- [Orova Agents Help Center](https://help.tixae.com)
 - [WhatsApp Business API Documentation](https://developers.facebook.com/docs/whatsapp)
 - [Contact Support](https://support.tixae.com)
 
 <Note>
-  This new embedded sign-up method streamlines the process of connecting your WhatsApp Business account by eliminating the need to manually create and configure a Facebook App. Follow the steps above to quickly integrate WhatsApp with your TIXAE agent.
+  This new embedded sign-up method streamlines the process of connecting your WhatsApp Business account by eliminating the need to manually create and configure a Facebook App. Follow the steps above to quickly integrate WhatsApp with your Orova agent.
 </Note>
 
 ---
