--- a/integration/Channels/whatsapp.mdx
+++ b/integration/Channels/whatsapp.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Connect WhatsApp"
-description: "Connect your WhatsApp Business account to your AI agent on TIXAE Agents."
+description: "Connect your WhatsApp Business account to your AI agent on Orova Agents."
 icon: "whatsapp"
 ---
 
@@ -25,9 +25,9 @@ icon: "whatsapp"
 1. On the "Add Products to Your App" page, locate the WhatsApp icon and click "Set Up".
 2. In the sidebar, click on the "Configuration" tab.
 3. In the Configuration window:
-   - Paste the callback URL and verify token from your TIXAE agent (found in Channels > WhatsApp).
+   - Paste the callback URL and verify token from your Orova agent (found in Channels > WhatsApp).
    - Click "Verify and Save".
-   - You should see a green success message in the TIXAE integration window.
+   - You should see a green success message in the Orova integration window.
 4. Scroll down to "Webhook fields".
    - Locate the "messages" tab and subscribe to it.
 
@@ -49,7 +49,7 @@ icon: "whatsapp"
 3. Add your phone number and select it for testing.
 4. Click "Generate Token" to create a temporary access token.
 5. Copy your token, phone ID, and business account ID.
-6. Paste these details into the TIXAE integration window.
+6. Paste these details into the Orova integration window.
 7. (Optional) Click the "Send Message" button on the App dashboard to send a test message to your recipient number.
 
 ![API Setup](/images/whatsapp-tut/11.png)
@@ -93,11 +93,11 @@ icon: "whatsapp"
 
 1. Return to [developers.facebook.com/apps/](https://developers.facebook.com/apps/).
 2. In your app's API Setup window, paste the new permanent token in the Access Token field.
-3. Update the token in the TIXAE integration window with this new permanent token.
+3. Update the token in the Orova integration window with this new permanent token.
 4. Send a message from your phone to the test WhatsApp number.
-5. Check the TIXAE conversations window to see if the message appears.
+5. Check the Orova conversations window to see if the message appears.
 
-If you see the conversation in TIXAE, congratulations! You have successfully connected WhatsApp to your agent.
+If you see the conversation in Orova, congratulations! You have successfully connected WhatsApp to your agent.
 
 ![Test Integration](/images/whatsapp-tut/25.png)
 ![Test Integration](/images/whatsapp-tut/26.png)
@@ -105,11 +105,11 @@ If you see the conversation in TIXAE, congratulations! You have successfully con
 
 <Note>
   You can follow the same steps to connect a WhatsApp Business account to your
-  TIXAE agent. images are provided in the tutorial for each step.
+  Orova agent. images are provided in the tutorial for each step.
 </Note>
 
 ### Learn More
-- This tutorial video provides a comprehensive guide on connecting WhatsApp to your TIXAE agent:
+- This tutorial video provides a comprehensive guide on connecting WhatsApp to your Orova agent:
 
 <iframe 
   width="100%" 
