--- a/integration/Voiceflow/overview.mdx
+++ b/integration/Voiceflow/overview.mdx
@@ -1,16 +1,16 @@
 ---
 title: 'Overview'
-description: 'Guide to integrating Voiceflow with TIXAE Agents, including analytics, templates, and library components.'
+description: 'Guide to integrating Voiceflow with Orova Agents, including analytics, templates, and library components.'
 icon: tree
 ---
 
 ## Introduction
-This documentation covers the integration of Voiceflow with [TIXAE Agents](https://voiceglow.org/). Learn how to connect your Voiceflow projects, access analytics, and leverage templates and library components for better performance.
+This documentation covers the integration of Voiceflow with [Orova Agents](https://voiceglow.org/). Learn how to connect your Voiceflow projects, access analytics, and leverage templates and library components for better performance.
 
 ### Prerequisites
 - [Voiceflow](https://www.voiceflow.com/) account and access to your project dashboard.
 - **Agent ID** and **Project ID** from Voiceflow.
-- Access to the [TIXAE Agents](https://voiceglow.org/) platform.
+- Access to the [Orova Agents](https://voiceglow.org/) platform.
 
 ---
 
@@ -22,12 +22,12 @@ This documentation covers the integration of Voiceflow with [TIXAE Agents](https
 
 ![Voiceflow AgentID and ProjectID](/images/voiceflow/1.gif)
 
-### Step 2: Configure in TIXAE
-1. Navigate to the [TIXAE Agents](https://voiceglow.org/) page and choose your agent.
+### Step 2: Configure in Orova
+1. Navigate to the [Orova Agents](https://voiceglow.org/) page and choose your agent.
 2. Enter the Voiceflow **Agent ID** and **Project ID** in the agent design section.
 3. Save the configuration and test the connection.
 
-![TIXAE Integration](/images/voiceflow/2.gif)
+![Orova Integration](/images/voiceflow/2.gif)
 
 <Note>
   ### Troubleshooting Tips
@@ -40,7 +40,7 @@ This documentation covers the integration of Voiceflow with [TIXAE Agents](https
 ## Voiceflow Analytics
 
 ### Accessing Analytics
-- Go to your TIXAE agent dashboard.
+- Go to your Orova agent dashboard.
 - Navigate to the **Analytics** section.
 
 <Warning>
@@ -68,7 +68,7 @@ This documentation covers the integration of Voiceflow with [TIXAE Agents](https
 ![VG Template](/images/voiceflow/5.gif)
 
 ### Where to Find the Template
-- Locate the VG template in the **[TIXAE Agents](https://voiceglow.org/)** profile section or download it directly from [here](https://cdn.voiceglow.org/public/VGLatestTemplate.vf).
+- Locate the VG template in the **[Orova Agents](https://voiceglow.org/)** profile section or download it directly from [here](https://cdn.voiceglow.org/public/VGLatestTemplate.vf).
 
 ### Importing the Template
 1. Download the VG template file.
