--- a/integration/deploying-to-website/iframe.mdx
+++ b/integration/deploying-to-website/iframe.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'Iframe'
-description: 'Explore the versatile applications of iframes for TIXAE AI agents'
+description: 'Explore the versatile applications of iframes for Orova AI agents'
 icon: frame
 ---
 
-Iframes introduce a whole new range of use cases for TIXAE agent, allowing for seamless integration into various platforms and websites. This method offers flexibility and reduces potential conflicts with existing scripts or stylesheets.
+Iframes introduce a whole new range of use cases for Orova agent, allowing for seamless integration into various platforms and websites. This method offers flexibility and reduces potential conflicts with existing scripts or stylesheets.
 
 ## Why Use Iframes?
 
@@ -35,7 +35,7 @@ Iframes introduce a whole new range of use cases for TIXAE agent, allowing for s
   </Accordion>
 
   <Accordion title="SaaS Add-on" icon="rocket">
-    Offer your TIXAE Agent as a value-added feature in your SaaS platform.
+    Offer your Orova Agent as a value-added feature in your SaaS platform.
 
     <Note>
       This approach allows for various monetization strategies, such as monthly retainer fees or custom setups with credit-based subscription models.
@@ -70,11 +70,11 @@ Iframes introduce a whole new range of use cases for TIXAE agent, allowing for s
 
 ## Implementation Guide
 
-**To integrate your TIXAE Agent using an iframe, follow these steps:**
+**To integrate your Orova Agent using an iframe, follow these steps:**
 
 <Steps>
   <Step title="Get Your Agent's Iframe URL">
-    1. Log in to your TIXAE Dashboard
+    1. Log in to your Orova Dashboard
     2. Navigate to your agent and click on `Deploy` in the upper right.
     3. Copy the iframe code snippet located beneath `iframe` 
 
@@ -98,7 +98,7 @@ Iframes introduce a whole new range of use cases for TIXAE agent, allowing for s
     ```
 
     <Warning>
-      Replace `YOUR_AGENT_ID` with your actual TIXAE Agent ID.
+      Replace `YOUR_AGENT_ID` with your actual Orova Agent ID.
     </Warning>
   </Step>
 
@@ -163,5 +163,5 @@ Iframes introduce a whole new range of use cases for TIXAE agent, allowing for s
 
 ## Conclusion
 
-Iframe integration opens up a world of possibilities for TIXAE Agents. By thinking creatively and leveraging the flexibility of iframes, you can create unique, engaging, and highly functional AI-powered experiences across various platforms and use cases.
+Iframe integration opens up a world of possibilities for Orova Agents. By thinking creatively and leveraging the flexibility of iframes, you can create unique, engaging, and highly functional AI-powered experiences across various platforms and use cases.
 
