--- a/integration/deploying-to-website/overview.mdx
+++ b/integration/deploying-to-website/overview.mdx
@@ -4,7 +4,7 @@ description: ''
 icon: tree
 ---
 
-TIXAE Agents can be deployed almost anywhere, from the most popular website builders to SaaS platforms. By utilizing code snippets for integration, the widget can be seamlessly embedded into your digital environment of choice.
+Orova Agents can be deployed almost anywhere, from the most popular website builders to SaaS platforms. By utilizing code snippets for integration, the widget can be seamlessly embedded into your digital environment of choice.
 ## Integration Methods
 
 There are four main methods of integrating your AI agent:
@@ -26,7 +26,7 @@ There are four main methods of integrating your AI agent:
 
 ## Universal Code Snippets
 
-Regardless of the platform you're using, these code snippets form the basis of your TIXAE integration:
+Regardless of the platform you're using, these code snippets form the basis of your Orova integration:
 
 <Tabs>
   <Tab title="Popup Widget">
@@ -75,7 +75,7 @@ Regardless of the platform you're using, these code snippets form the basis of y
   
   <Tab title="Iframe">
 
-    Iframes introduce a whole new range of usecases with the huge variety of applications TIXAE Agents brings to the table. 
+    Iframes introduce a whole new range of usecases with the huge variety of applications Orova Agents brings to the table. 
 
     Integrating as a more integral part of websites, platforms or internal helper agents, iframes are a good way to point to your agent without the need to render the script directly on the site, where it might conflict with other scripts. The same with CSS as it might (in some cases - very rare) affect a sites stylesheet. Some popular use-cases are:
 
@@ -87,7 +87,7 @@ Regardless of the platform you're using, these code snippets form the basis of y
     
     - *We cant wait to see all your awesome integrations and use-cases - feel free to share them with us, either via [discord]() or make [Gia]() send it.*
     
-          *Regards, the TIXAE AI team*
+          *Regards, the Orova AI team*
 
 
 
@@ -103,7 +103,7 @@ Regardless of the platform you're using, these code snippets form the basis of y
 </Tabs>
 
 <Note>
-  Always replace `YOUR_AGENT_ID` with your actual TIXAE Agent ID in all code snippets.
+  Always replace `YOUR_AGENT_ID` with your actual Orova Agent ID in all code snippets.
 </Note>
 
 ## Key Configuration Options
@@ -112,7 +112,7 @@ The `VG_CONFIG` object in the script allows for customization of your agent's be
 
 <AccordionGroup>
   <Accordion title="ID">
-    Your unique TIXAE Agent identifier.
+    Your unique Orova Agent identifier.
   </Accordion>
   <Accordion title="region">
     Set to 'eu' for Europe or 'na' for North America, based on your account region.
