--- a/integration/deploying-to-website/shopify.mdx
+++ b/integration/deploying-to-website/shopify.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Shopify'
-description: 'Integrate your TIXAE Agent into your Shopify store.'
+description: 'Integrate your Orova Agent into your Shopify store.'
 icon: shopify
 ---
 
@@ -9,7 +9,7 @@ icon: shopify
 Before you begin, make sure you have:
 <CardGroup cols={2}>
   <Card title="" icon="face-smile-wink">
-    A TIXAE Agents account with a configured AI agent
+    A Orova Agents account with a configured AI agent
   </Card>
   <Card title="" icon="shopify">
     Admin access to your Shopify store
@@ -22,8 +22,8 @@ Before you begin, make sure you have:
 ## Integration Steps
 
 <Steps>
-  <Step title="Access Your TIXAE Dashboard">
-    Log in to your TIXAE Agents account and navigate to your agent's settings. Note down your unique agent ID.
+  <Step title="Access Your Orova Dashboard">
+    Log in to your Orova Agents account and navigate to your agent's settings. Note down your unique agent ID.
 
     <Info>
         You'll find an agents unique ID on its dedicated card in the `Agents` tab or in the URL from the agent designer ex. https://www.tixaeagents.ai/app/eu/agents/gib2no07kqdy1f2m/overview 
@@ -67,7 +67,7 @@ Before you begin, make sure you have:
     ```
 
     <Warning>
-      Remember to replace **YOUR_AGENT_ID** with your actual TIXAE Agent ID.
+      Remember to replace **YOUR_AGENT_ID** with your actual Orova Agent ID.
     </Warning>
   </Step>
   
@@ -106,12 +106,12 @@ You can customize your widget's behavior and appearance by adjusting the `VG_CON
 
 ## Troubleshooting
 
-If you encounter issues with your TIXAE Agent widget integration:
+If you encounter issues with your Orova Agent widget integration:
 
 
 1. Verify that you've copied the entire code snippet correctly.
 
-2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual TIXAE Agent ID.
+2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual Orova Agent ID.
 
 3. Ensure the code is placed just before the closing `</body>` tag in your `theme.liquid` file. If this does not work, try placing it at the bottom of the `</header>` tag at the top of the `theme.liquied` file.
 
