--- a/integration/deploying-to-website/squarespace.mdx
+++ b/integration/deploying-to-website/squarespace.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Squarespace'
-description: 'Integrate your TIXAE Agent into your Squarespace site.'
+description: 'Integrate your Orova Agent into your Squarespace site.'
 icon: squarespace
 ---
 
@@ -8,7 +8,7 @@ icon: squarespace
 Before you begin, make sure you have:
 <CardGroup cols={2}>
   <Card title="" icon="face-smile-wink">
-    A TIXAE Agents account with a configured AI agent
+    A Orova Agents account with a configured AI agent
   </Card>
   <Card title="" icon="squarespace">
     Admin access to your Squarespace website
@@ -19,8 +19,8 @@ Before you begin, make sure you have:
 ## Integration Steps
 
 <Steps>
-  <Step title="Access Your TIXAE Dashboard">
-    Log in to your TIXAE Agents account and navigate to your agent's settings. Note down your unique agent ID.
+  <Step title="Access Your Orova Dashboard">
+    Log in to your Orova Agents account and navigate to your agent's settings. Note down your unique agent ID.
 
     <Info>
         You'll find an agent's unique ID on its dedicated card in the `Agents` tab or in the URL from the agent designer ex. https://www.tixaeagents.ai/app/eu/agents/gib2no07kqdy1f2m/overview 
@@ -65,7 +65,7 @@ Before you begin, make sure you have:
     ```
 
     <Warning>
-      Remember to replace **YOUR_AGENT_ID** with your actual TIXAE Agent ID.
+      Remember to replace **YOUR_AGENT_ID** with your actual Orova Agent ID.
     </Warning>
   </Step>
   
@@ -104,11 +104,11 @@ You can customize your widget's behavior and appearance by adjusting the `VG_CON
 
 ## Troubleshooting
 
-If you encounter issues with your TIXAE Agent widget integration:
+If you encounter issues with your Orova Agent widget integration:
 
 1. Verify that you've copied the entire code snippet correctly into the Header section of Code Injection.
 
-2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual TIXAE Agent ID.
+2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual Orova Agent ID.
 
 3. Ensure you've saved the changes in the Code Injection page.
 
