--- a/integration/deploying-to-website/wix.mdx
+++ b/integration/deploying-to-website/wix.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Wix'
-description: 'Integrate your TIXAE Agent into your Wix store.'
+description: 'Integrate your Orova Agent into your Wix store.'
 icon: wix
 ---
 
@@ -9,7 +9,7 @@ icon: wix
 Before you begin, make sure you have:
 <CardGroup cols={2}>
   <Card title="" icon="face-smile-wink">
-    A TIXAE Agents account with a configured AI agent
+    A Orova Agents account with a configured AI agent
   </Card>
   <Card title="" icon="wix">
     Admin access to your Wix website
@@ -22,8 +22,8 @@ Before you begin, make sure you have:
 ## Integration Steps
 
 <Steps>
-  <Step title="Access Your TIXAE Dashboard">
-    Log in to your TIXAE Agents account and navigate to your agent's settings. Note down your unique agent ID.
+  <Step title="Access Your Orova Dashboard">
+    Log in to your Orova Agents account and navigate to your agent's settings. Note down your unique agent ID.
 
     <Info>
         You'll find an agent's unique ID on its dedicated card in the `Agents` tab or in the URL from the agent designer ex. https://www.tixaeagents.ai/app/eu/agents/gib2no07kqdy1f2m/overview 
@@ -70,13 +70,13 @@ Before you begin, make sure you have:
     ```
 
     <Warning>
-      Remember to replace **YOUR_AGENT_ID** with your actual TIXAE Agent ID.
+      Remember to replace **YOUR_AGENT_ID** with your actual Orova Agent ID.
     </Warning>
   </Step>
   
   <Step title="Configure Code Settings">
     1. Select the **domain** it will be connected to.
-    2. Set a **name** for your custom code (e.g., "TIXAE Agent widget").
+    2. Set a **name** for your custom code (e.g., "Orova Agent widget").
     3. Choose between **add code to all pages** or specify which pages you want the widget to appear on.
     4. Tick the `Head` box to place the code in the header.
     
@@ -101,11 +101,11 @@ Before you begin, make sure you have:
 
 ## Troubleshooting
 
-**If you encounter issues with your TIXAE Agent widget integration:**
+**If you encounter issues with your Orova Agent widget integration:**
 
 1. Verify that you've copied the entire code snippet correctly into the HTML iframe.
 
-2. Double-check that you've replaced `YOUR_AGENT_ID` with your actual TIXAE Agent ID.
+2. Double-check that you've replaced `YOUR_AGENT_ID` with your actual Orova Agent ID.
 
 3. Ensure you've applied the custom code to all pages (or the specific pages where you want the widget to appear).
 
