--- a/integration/deploying-to-website/wordpress.mdx
+++ b/integration/deploying-to-website/wordpress.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'WordPress'
-description: 'Integrate your TIXAE Agent into your WordPress website.'
+description: 'Integrate your Orova Agent into your WordPress website.'
 icon: wordpress
 ---
 
@@ -10,7 +10,7 @@ icon: wordpress
 Before you begin, make sure you have:
 <CardGroup cols={2}>
   <Card title="" icon="face-smile-wink">
-    A TIXAE Agents account with a configured AI agent
+    A Orova Agents account with a configured AI agent
   </Card>
   <Card title="" icon="wordpress">
     Admin access to your WordPress website
@@ -20,7 +20,7 @@ Before you begin, make sure you have:
 
 ## Integration Methods
 
-There are three main ways to integrate your TIXAE Agent widget into WordPress:
+There are three main ways to integrate your Orova Agent widget into WordPress:
 
 <CardGroup cols={3}>
   <Card title="Plugin Method" icon="puzzle-piece">
@@ -34,9 +34,9 @@ There are three main ways to integrate your TIXAE Agent widget into WordPress:
   </Card>
 </CardGroup>
 
-## TIXAE Agent Widget Code
+## Orova Agent Widget Code
 
-Before proceeding with any method, you'll need your TIXAE Agent widget code:
+Before proceeding with any method, you'll need your Orova Agent widget code:
 
 ```html
 <div id="VG_OVERLAY_CONTAINER"></div>
@@ -59,7 +59,7 @@ Before proceeding with any method, you'll need your TIXAE Agent widget code:
 ```
 
 <Warning>
-  Remember to replace **YOUR_AGENT_ID** with your actual TIXAE Agent ID.
+  Remember to replace **YOUR_AGENT_ID** with your actual Orova Agent ID.
 </Warning>
 
 ## Method 1: Using a Plugin
@@ -75,7 +75,7 @@ Before proceeding with any method, you'll need your TIXAE Agent widget code:
     Go to **Settings** > **WP Headers and Footers** in the sidebar
   </Step>
   <Step title="Add Widget Code">
-    Paste the TIXAE Agent widget code in the header section
+    Paste the Orova Agent widget code in the header section
   </Step>
   <Step title="Save Changes">
     Click **Save Changes**
@@ -97,7 +97,7 @@ Before proceeding with any method, you'll need your TIXAE Agent widget code:
     2. Locate the closing `</head>` tag
   </Step>
   <Step title="Add Widget Code">
-    Paste the TIXAE Agent widget code just before the closing `</head>` tag
+    Paste the Orova Agent widget code just before the closing `</head>` tag
   </Step>
   <Step title="Save Changes">
     Click **Update File** to save your changes
@@ -121,7 +121,7 @@ Before proceeding with any method, you'll need your TIXAE Agent widget code:
        - `<body>` - Start for beginning of the page's body
        - `<body>` - End for end of the page's body
     3. Set the **Priority** (1-10, lower numbers have higher priority)
-    4. Paste the TIXAE Agent widget code in the code block editor
+    4. Paste the Orova Agent widget code in the code block editor
   </Step>
   <Step title="Set Display Conditions">
     1. In the **Publish** block, click **Edit** next to **Conditions**
@@ -156,14 +156,14 @@ javascript
 </AccordionGroup>
 
 ## Troubleshooting
-**If you encounter issues with your TIXAE Agent widget integration:**
+**If you encounter issues with your Orova Agent widget integration:**
 
 1. Verify that you've copied the entire code snippet correctly.
-2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual TIXAE Agent ID.
+2. Double-check that you've replaced "YOUR_AGENT_ID" with your actual Orova Agent ID.
 3. Clear your browser cache and refresh your WordPress website to see changes.
 4. If using a caching plugin, clear the cache after making changes.
 5. Check for conflicts with other plugins or theme customizations.
 
 <Note>
-  If you're using a security plugin, make sure it's not blocking the TIXAE Agent scripts from loading.
+  If you're using a security plugin, make sure it's not blocking the Orova Agent scripts from loading.
 </Note>
