--- a/whitelabeling/agency/custom-domain.mdx
+++ b/whitelabeling/agency/custom-domain.mdx
@@ -13,20 +13,20 @@ Navigate to the Domains tab in your agency settings to connect a domain that wil
 ### Domain Setup Options
 You have two options for setting up your domain:
 <CardGroup cols={2}>
-  <Card title="TIXAE Agent Subdomain" icon="globe">
-    Connect to a TIXAE Agents domain (e.g., youragency.tixae.ai)
+  <Card title="Orova Agent Subdomain" icon="globe">
+    Connect to a Orova Agents domain (e.g., youragency.orova.ai)
   </Card>
   <Card title="Custom Domain" icon="server">
     Use a custom domain that you've set up yourself
   </Card>
 </CardGroup>
-## Using a TIXAE Agent Subdomain
+## Using a Orova Agent Subdomain
 <Steps>
   <Step title="Enter Desired Name">
     Type your desired subdomain name in the provided field.
   </Step>
   <Step title="Automatic Creation">
-    TIXAE Agents will automatically create a new subdomain for you.
+    Orova Agents will automatically create a new subdomain for you.
   </Step>
   <Step title="Verification">
     Wait for the `Domain verified successfully` and `Domain is live` messages to confirm success.
