--- a/whitelabeling/agency/email.mdx
+++ b/whitelabeling/agency/email.mdx
@@ -22,7 +22,7 @@ A custom email domain reinforces your professional image and enhances client tru
 <video src="/images/agency-add-email-domain.mp4" alt="add email doamin video" width="500" className="rounded-md" autoPlay loop/>
 </Frame>
 <Info>
-Enter only the domain (e.g., yourdomain.com) without any protocol (https://). For example, we added **tixaeagents.ai**
+Enter only the domain (e.g., yourdomain.com) without any protocol (https://). For example, we added **orovaagents.ai**
 </Info>
   </Step>
   <Step title="Add DNS Records">
