--- a/whitelabeling/agency/overview-tab.mdx
+++ b/whitelabeling/agency/overview-tab.mdx
@@ -4,7 +4,7 @@ description: ''
 icon: tree
 ---
 
-The Agency Overview tab is where you establish your agency's identity within the TIXAE Agents platform. This information will be prominently displayed in your client dashboard, creating a cohesive and branded experience for your customers.
+The Agency Overview tab is where you establish your agency's identity within the Orova Agents platform. This information will be prominently displayed in your client dashboard, creating a cohesive and branded experience for your customers.
 
 <Frame>
   <img src="/images/agency-overview-tab.png" alt="Agency Overview Tab" />
@@ -15,7 +15,7 @@ The Agency Overview tab is where you establish your agency's identity within the
     Enter your agency's name in the `Agency Name` field. This will be displayed in the top left corner of the dashboard.
 <CodeGroup>
 ```plaintext Example
-Agency Name: TIXAE Agents
+Agency Name: Orova Agents
 ```
 </CodeGroup>
   </Step>
@@ -27,7 +27,7 @@ Use the format `[YOUR_TEXT](YOUR_LINK)` to create a clickable link within your b
 
 <CodeGroup>
 ```markdown Example
-Create awesome AI Agents with [TIXAE Agents](https://tixaeagents.ai)
+Create awesome AI Agents with [Orova Agents](https://tixaeagents.ai)
 ```
 </CodeGroup>
   </Step>
