--- a/whitelabeling/agency/what-is-an-agency.mdx
+++ b/whitelabeling/agency/what-is-an-agency.mdx
@@ -6,22 +6,22 @@ icon: question
 
 
 
-Are you an agency starting of selling AI agents to clients or an already established business? TIXAE Agents provides you with the neccessary tools to sell, manage and charge clients (**CHARGING COMING SOON**) whitelabeled with your own logo, domain and email. Its an amazing way to start your journey as an AI agency, business or sell agents as an addon to your range of products. 
+Are you an agency starting of selling AI agents to clients or an already established business? Orova Agents provides you with the neccessary tools to sell, manage and charge clients (**CHARGING COMING SOON**) whitelabeled with your own logo, domain and email. Its an amazing way to start your journey as an AI agency, business or sell agents as an addon to your range of products. 
 
-Whether you're in web development or a marketing agency, TIXAE Agents fit into most businesses with their nearly limitless variety, designs and [integrations](/integration/overview). This guide will explain everything you have to do to set up your agency and be ready to sell your services to clients as fast as possible.
+Whether you're in web development or a marketing agency, Orova Agents fit into most businesses with their nearly limitless variety, designs and [integrations](/integration/overview). This guide will explain everything you have to do to set up your agency and be ready to sell your services to clients as fast as possible.
 
 <Note>
 These features are part of our whitelabel addon. If you haven't enabled whitelabeling yet, check out our [Getting Started with Whitelabeling](/whitelabeling/getting-started) guide. 
 </Note>
 
-## Why Choose TIXAE Agents for Your Agency?
+## Why Choose Orova Agents for Your Agency?
 
 <CardGroup cols={2}>
   <Card title="Complete Branding Control" icon="brush">
     Showcase your own logo, domain, and email for a seamless brand experience. **More branding options coming soon**
   </Card>
   <Card title="Versatile Integration" icon="puzzle-piece">
-    Whether you're in web development, marketing, or any other industry, TIXAE Agents can enhance your offer.
+    Whether you're in web development, marketing, or any other industry, Orova Agents can enhance your offer.
   </Card>
   <Card title="Scalable Solutions" icon="chart-line">
     Start small and grow big - our platform scales with your agency's needs.
@@ -33,7 +33,7 @@ These features are part of our whitelabel addon. If you haven't enabled whitelab
 
 ## Getting Started with Your AI Agency
 
-Setting up your agency with TIXAE Agents is a straightforward process:
+Setting up your agency with Orova Agents is a straightforward process:
 
 <Steps>
   <Step title="Enable Whitelabeling">
@@ -77,10 +77,10 @@ Setting up your agency with TIXAE Agents is a straightforward process:
 
 ## Ready to transform Businesses with AI?
 
-We are **super excited** that you're embarking on the AI agency journey with TIXAE Agents! This opens up a world of possibilities, whether you're looking to add AI capabilities to your existing services or start a whole new venture. If you have any questions along the way, our team is more than willing to help out as we run our own agency and have lots of experience in the field! So dont hesitate to [reach out](/Support/contact) or ask in the [discord community](https://discord.gg/tzJ5AxQCsT).
+We are **super excited** that you're embarking on the AI agency journey with Orova Agents! This opens up a world of possibilities, whether you're looking to add AI capabilities to your existing services or start a whole new venture. If you have any questions along the way, our team is more than willing to help out as we run our own agency and have lots of experience in the field! So dont hesitate to [reach out](/Support/contact) or ask in the [discord community](https://discord.gg/tzJ5AxQCsT).
 
 
-*- Regards, the TIXAE AI team*
+*- Regards, the Orova AI team*
 
 <Tip>
 **Remember:** The key to implementing agents successfully is not just in the technology, but in how you apply it to solve real-world problems for your clients. Focus on understanding your clients' needs and leveraging the platforms capabilities effectively and you will find success.
