--- a/whitelabeling/getting-started.mdx
+++ b/whitelabeling/getting-started.mdx
@@ -5,25 +5,25 @@ icon: rocket
 ---
 
 ## What is Whitelabeling?
-White-labeling in TIXAE Agents allows agencies to fully customize the chatbot experience under their own branding. This feature provides the flexibility for agencies to present the chatbot as part of their brand while managing multiple clients seamlessly.
+White-labeling in Orova Agents allows agencies to fully customize the chatbot experience under their own branding. This feature provides the flexibility for agencies to present the chatbot as part of their brand while managing multiple clients seamlessly.
 
 ### Key Benefits of White-Labeling
 - **Brand Customization:** Customize the dashboard, chat interfaces, and client interactions to align with your brand.
 - **Enhanced Client Relationships:** Offer a branded experience that makes your clients feel directly supported by your agency.
 - **Efficient Management:** Use a single platform to manage multiple clients, chatbots, and user interactions without revealing third-party tools.
 
-## White-Labeling in TIXAE Agents
-The TIXAE Agents platform supports robust white-labeling features tailored for agencies, including client management, team access controls, and chat monitoring. Agencies can integrate AI-powered chatbots into their service offerings, enhancing value and engagement with each client.
+## White-Labeling in Orova Agents
+The Orova Agents platform supports robust white-labeling features tailored for agencies, including client management, team access controls, and chat monitoring. Agencies can integrate AI-powered chatbots into their service offerings, enhancing value and engagement with each client.
 
 ## Prerequisites
 Before you begin, ensure you have:
-- A registered account with TIXAE Agents.
+- A registered account with Orova Agents.
 - Necessary permissions and subscription to create and manage agency dashboards.
 
 ## Step 1: Creating Your Agency Dashboard
 
-### 1. Log In to TIXAE Agents
-Log in to your [TIXAE Agents](https://voiceglow.org/) account. Upon logging in, navigate to the **Agency tab** where you can begin creating your branded agency dashboard.
+### 1. Log In to Orova Agents
+Log in to your [Orova Agents](https://voiceglow.org/) account. Upon logging in, navigate to the **Agency tab** where you can begin creating your branded agency dashboard.
 
 ### 2. Add Your Agency Information
 In the **Agency tab**, add your **agency name** and a **brand tagline/description**. This helps personalize the dashboard for your agency. You can also add your agency logos for light mode and dark mode.
@@ -34,7 +34,7 @@ In the **Agency tab**, add your **agency name** and a **brand tagline/descriptio
 
 ### 3. Set Up Your Domain
 In the **Domain dropdown**, you have two options:
-- **Create Subdomain**: Choose this option if you want to use a subdomain under TIXAE Agents.
+- **Create Subdomain**: Choose this option if you want to use a subdomain under Orova Agents.
 - **Connect Your Own Domain**: If you already have a domain, you can connect it here.
 
 <Note>
