--- a/agent-creation/initial-message.mdx
+++ b/agent-creation/initial-message.mdx
@@ -7,7 +7,7 @@ icon: message
 ## Overview  
  
 
-The initial message in TIXAE Agents allows you to set predefined starter messages that your AI agent sends every time a new user interacts with the widget. These messages help set the tone and provide initial guidance to users.  
+The initial message in Orova Agents allows you to set predefined starter messages that your AI agent sends every time a new user interacts with the widget. These messages help set the tone and provide initial guidance to users.  
 
 You can add multiple variants of the initial message, and a random variant will be shown to the user each time for a **unique experience**. You also have the option to generate new variants using AI, which can save time and effort.  
 
